began fixing hard to read text

--- a/dev/styles/partials/_aboutUs.scss
+++ b/dev/styles/partials/_aboutUs.scss
@@ -8,14 +8,13 @@
 	align-items: center;
 	text-align: center;
 	flex-wrap: wrap;
-	h2{
-		width: 50%;
-		font-size: 35px;
-		line-height: 2;
-	}
 }
 
 .aboutContent{
-	width: 50%;
+	h2{
+		font-size: 35px;
+		line-height: 2;
+	}
 	font-size: 25px;
+	background: rgba(255,255,255,0.3);
 }
